--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,7 @@ app = 'minify-backend'
 primary_region = 'ams'
 
 [build]
+  dockerfile = "Dockerfile"  # Specify the Dockerfile path here
 
 [http_service]
   internal_port = 3000
