Switch CPU configuration to shared while maintaining 32GB memory allocation in fly.toml

--- a/fly.toml
+++ b/fly.toml
@@ -14,6 +14,6 @@ primary_region = 'ams'
 
 [[vm]]
   memory = '32gb'
-  cpu_kind = 'performance'
+  cpu_kind = 'shared'
   cpus = 16
   memory_mb = 32768
